Ready home page

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "imask": "^5.2.1",
     "jquery": "^3.4.1",
     "jquery-popup-overlay": "^2.1.4",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "swiper": "^5.2.0"
   },
   "browserslist": [
     "last 5 version",
