--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "wpackagist-plugin/force-regenerate-thumbnails": "*",
     "wpackagist-plugin/wordpress-seo": "*",
     "wpackagist-plugin/contact-form-7": "*",
-    "wpackagist-plugin/w3dev-fancybox": "*"
+    "wpackagist-plugin/w3dev-fancybox": "*",
+    "wpackagist-plugin/all-in-one-wp-migration": "*"
   },
   "extra": {
     "wordpress-install-dir": "app/wp",
