--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "wpackagist-plugin/wordpress-seo": "*",
     "wpackagist-plugin/contact-form-7": "*",
     "wpackagist-plugin/w3dev-fancybox": "*",
-    "wpackagist-plugin/all-in-one-wp-migration": "*"
+    "wpackagist-plugin/all-in-one-wp-migration": "*",
+    "wpackagist-plugin/taxonomy-terms-order": "*"
   },
   "extra": {
     "wordpress-install-dir": "app/wp",
