Added new functionals

--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@fancyapps/fancybox": "^3.5.7",
     "bootstrap": "^4.3.1",
     "imask": "^5.2.1",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.4.1",
+    "jquery-bridget": "^2.0.1",
+    "jquery-match-height-browserify": "^0.7.0",
     "jquery-popup-overlay": "^2.1.4",
     "svg4everybody": "^2.1.9",
     "swiper": "^5.2.0",
